# SportBetX

./: .env.example  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml  e2e.yml
backend/api-gateway/: .eslintrc.js  Dockerfile  jest.config.js  package-lock.json  package.json
backend/api-gateway/src/: index.ts
backend/api-gateway/src/__tests__/: stellarErrorHandler.test.ts  validation.test.ts
backend/api-gateway/src/config/: database.ts  redis.ts
backend/api-gateway/src/middleware/: auth.ts  errorHandler.ts  rateLimiter.ts  stellarErrorHandler.ts
backend/api-gateway/src/routes/: auth.ts  betting.ts  governance.ts  leaderboard.ts  liquidity.ts  notifications.ts  odds.ts  oracle.ts  responsibleGambling.ts  search.ts
backend/api-gateway/src/services/: notificationService.ts  oddsService.ts  responsibleGamblingService.ts  socketService.ts
backend/api-gateway/src/utils/: logger.ts
backend/oracle-service/: package.json
backend/oracle-service/src/: index.ts  logger.ts  oracle.ts
contracts/: Cargo.toml
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs  types.rs
docs/: api-reference.md
frontend/betting-interface/: .eslintrc.cjs  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/betting-interface/src/: App.tsx
infrastructure/database/: 001-schema.sql
infrastructure/grafana/: dashboard.json
infrastructure/prometheus/: prometheus.yml
scripts/: check-env.sh
tests/e2e/: package.json  playwright.config.ts
tests/e2e/specs/: betting-flow.spec.ts  wallet-flow.spec.ts
(+29 files in other folders)
