[package]
name = "sportbetx-shared"
version = "1.0.0"
edition = "2021"
description = "Shared types and utilities for SportBetX smart contracts"
authors = ["SportBetX Team <team@sportbetx.io>"]
license = "MIT"
repository = "https://github.com/ChainNova-Labs/SportBetX"
homepage = "https://sportbetx.io"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
